--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,21 @@
 @import "tailwindcss";
 
+  section {
+            padding: 5rem 10%;
+            min-height: 100vh;
+        }
+
+        .section-title {
+            font-size: 3rem;
+            text-align: center;
+            margin-bottom: 4rem;
+            font-weight: 700;
+        }
+
+        .section-title span {
+            font-weight: 300;
+            -webkit-text-stroke: 1px #333;
+            color: transparent;
+        } 
+
+    
