--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+
+    body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            color: #333;
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
+
   section {
             padding: 5rem 10%;
             min-height: 100vh;
@@ -13,9 +21,17 @@
         }
 
         .section-title span {
-            font-weight: 300;
+            font-weight: 600;
             -webkit-text-stroke: 1px #333;
             color: transparent;
         } 
 
-    
+a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+a:hover {
+  color: #666;
+}
